--- a/es6/02_연산자.html
+++ b/es6/02_연산자.html
@@ -29,8 +29,14 @@
         console.log(result5) 
 
         //문제 - 학점 
-        const score = 88
-        let grade = score>=90 ? 'A' : score>=80 ? 'B' : score>=70 ? 'C' : 'D'
+        const score = 68
+        //let grade = score>=90 ? 'A' : score>=80 ? 'B' : score>=70 ? 'C' : score>=60 ? 'D' : 'F'
+        let grade = score >= 90 && 'A' 
+                  || score >= 80 && 'B'
+                  || score >= 70 && 'C'
+                  || score >= 60 && 'D'
+                  || 'F'
+
         console.log(`점수가 ${score}점 이므로 ${grade}학점 입니다`)
 
     </script>
