--- a/es6/03_화살표 함수.html
+++ b/es6/03_화살표 함수.html
@@ -7,6 +7,39 @@
     <title>Document</title>
 </head>
 <body>
+    <script>
+        function make1(){
+            console.log('Have a nice day!!')
+        }
+        make1() //호출
+
+        function make2(num){
+            console.log(`num = ${num}`)
+        }
+        make2(100) //호출
+
+        function make3(a, b){
+            console.log(`${a} + ${b} = ${a+b}`)
+        }
+        make3(25, 36)
+
+        //화살표 함수 
+        const make11 = () => { //make11이 함수라는거 = () 이렇게 알려줌.
+            console.log('Have a nice day!!')
+        }
+        make11() //호출
+
+        const make22 = (num) => {
+            console.log(`num = ${num}`)
+        }
+        make22(100) //호출 
+
+        const make33 = (a, b) => {
+            console.log(`${a} + ${b} = ${a+b}`)
+        }
+        make33(25, 36) //호출 
+        
+    </script>
     
 </body>
 </html>
