--- a/es6/07_find.html
+++ b/es6/07_find.html
@@ -19,6 +19,26 @@
         //find한 값의 index 번호를 출력 
         const result3 = arr.findIndex(item => item === 20) 
         console.log(result3)
+        console.log('----------')
+
+
+        const data = [
+            {id: 1, name: '홍길동', age: 25},
+            {id: 2, name: '프로도', age: 20},
+            {id: 3, name: '라이언', age: 30},
+        
+        ]
+
+        //id가 1인 값 
+        const data2 = data.find(item => item.id === 1)
+        console.log(data2)
+
+        const data3 = data.find(item => item.name === '어피치')
+        console.log(data3) //값이 없어서 undefined
+
+        const data4 = data.findIndex(item => item.name === '어피치')
+        console.log(data4) //값이 없어서 -1
+
     </script>
     
 </body>
